Fix combination label cross dropping down to the next line on the product page on Firefox

--- a/admin-dev/themes/new-theme/scss/pages/_product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_product_page.scss
@@ -178,9 +178,12 @@
     line-height: 1;
     color: #fff;
     text-align: center;
-    white-space: nowrap;
     vertical-align: baseline;
     background-color: $brand-primary;
+
+    > .token-label {
+      white-space: nowrap;
+    }
 
     .close {
       margin: 0 .4rem;
